[#3] implementation of /user/search
