# src/main/resources/openapi.json
@@ -138,7 +138,7 @@
             "description": "Условие поиска по имени"
           },
           {
-            "name": "last_name",
+            "name": "second_name",
             "schema": {
               "type": "string",
               "description": "Часть фамилии для поиска",
@@ -679,7 +679,7 @@
           }
         },
         "required": [
-          "first_name", "password"
+          "first_name", "second_name", "password"
         ]
       },
       "RegisterResponse": {
